# Webserver_CICD

./: .dockerignore  2025_08_14_ServerLog  2025_08_15_ServerLog  2025_08_17_ServerLog  2025_08_18_ServerLog  2025_08_19_ServerLog  2025_08_20_ServerLog  2025_08_21_ServerLog  2025_08_22_ServerLog  2025_08_23_ServerLog  2025_08_24_ServerLog  2025_08_25_ServerLog  2025_08_26_ServerLog  2025_08_27_ServerLog  2025_08_28_ServerLog  CICD-流程指南.md  CMakeLists.txt  Dockerfile  README.Docker.md  blog.md  blog_schema.sql  database_migration_final.sql  developmentlog.md  docker-compose.yml  main.cpp  makefile  migrate_to_webserver_final.sql  server  vblog.sql  webserver.cpp  webserver.h  用户认证与权限管理系统分析.md
.github/workflows/: ci-cd.yml  ci-cd.yml.backup  docker-publish.yml  pr-check.yml  release.yml
CGImysql/: sql_connection_pool.cpp
blog/: blog_handler.cpp  blog_handler.cpp.backup  blog_handler.h  image_uploader.cpp  image_uploader.h  markdown_parser.cpp  markdown_parser.h  template_engine.cpp  template_engine.h
conf/: myserver.conf
docker/mysql/conf/: my.cnf
docker/mysql/init/: 01-safe-init-database.sql
docker/nginx/: nginx.conf
docker/nginx/conf.d/: webserver.conf
http/: http_conn.cpp  http_conn.h
password_upgrade/: README.md  generate_admin_password  generate_admin_password.cpp  rebuild_database.sql
root/: judge.html  log.html  logError.html  picture.html  register.html  registerError.html  static  video.html  welcome.html
root/static/css/: main.css
root/static/js/: main.js
scripts/: backup-database.sh  restore-database.sh
static/css/: admin.css
templates/: article.html  index.html  layout.html
templates/admin/: dashboard.html
templates/partials/: footer.html  header.html
tests/: test_http.cpp  友元声明权限问题解决方案.md
